# hidog

./: CMakeLists.txt  main.cpp
VS2008/: VS2008.sln
VS2008/VS2008/: ReadMe.txt  VS2008.cpp  VS2008.vcproj  stdafx.cpp
VS2008/hidog_dll/: ReadMe.txt  hidog_dll.cpp  hidog_dll.h  hidog_dll.vcproj  stdafx.cpp
VS2008/hidog_lib/: hidog_lib.vcproj
cmake/: container_queueStatic.cmake  math_complex.cmake  math_fraction.cmake  math_polynomial.cmake  numeric_vector.cmake
cmake_test/: CMakeLists.txt
cmake_test/cmake/: dlldyn.cmake  lib_2.cmake  lib_3.cmake  lib_4.cmake
cmake_test/dlldyn/: dlldyn.cpp  dlldyn.h
cmake_test/dlltest/: CMakeLists.txt  dlltest.cpp  dlltest.h
cmake_test/lib/: lib_2.cpp  lib_2.h
cmake_test/lib/src/: lib_3.cpp  lib_3.h  lib_4.cpp  lib_4.h
cmake_test/lib_1/: CMakeLists.txt  lib_1.cpp  lib_1.h
cmake_test/main/: cmake.cpp  cmake.h  main.cpp
cmake_test/main/src/: cmake_1.cpp  cmake_1.h  shared.h
gtest/gtest/: gtest.cpp  gtest.vcproj  set_gtest.cpp
gtest/test_src/: vector_test.cpp  vector_test.h
src/: shared.cpp  shared.h
src/container/: queue_static.cpp  queue_static.h
src/imgproc/: gaussfilter.cpp  gaussfilter.h  imgproc_def.h
src/math/: complex.cpp  complex.h  fraction.cpp  fraction.h  polynomail.h  polynomial.cpp  polynomial.h
src/numeric/: matrix.cpp  matrix.h  matrix.hpp  vector.cpp  vector.h  vector.hpp
ubuntu/: main.cpp  makefile
vs2012/: vs2012.cpp  vs2012.sln  vs2012.vcxproj  vs2012.vcxproj.filters
xcode/xcode/: main.cpp  xcode.1
xcode/xcode.xcodeproj/: project.pbxproj
xcode/xcode_dylib/: xcode_dylib.cpp  xcode_dylib.h  xcode_dylibTarget.xcconfig
